--- a/node/package.json
+++ b/node/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "faker": "^5.4.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5"
   }
 }
