adicionando comando para instalar as dependências no Dockerfile

--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -9,5 +9,6 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
     && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
 COPY . .
+RUN npm i
 EXPOSE 3000
 CMD node index.js
